# pkg/adapters/http/files_handler.go
@@ -1,4 +1,4 @@
-// Copyright OpenAI Responses Gateway Authors
+// Copyright Open Responses Gateway Authors
 // SPDX-License-Identifier: Apache-2.0
 
 package http
@@ -10,8 +10,8 @@ import (
 	"strconv"
 	"time"
 
-	"github.com/leseb/openai-responses-gateway/pkg/core/schema"
-	"github.com/leseb/openai-responses-gateway/pkg/storage/memory"
+	"github.com/leseb/openresponses-gw/pkg/core/schema"
+	"github.com/leseb/openresponses-gw/pkg/storage/memory"
 )
 
 const (
