# pkg/core/services/models.go
@@ -1,4 +1,4 @@
-// Copyright OpenAI Responses Gateway Authors
+// Copyright Open Responses Gateway Authors
 // SPDX-License-Identifier: Apache-2.0
 
 package services
@@ -8,8 +8,8 @@ import (
 	"fmt"
 	"time"
 
-	"github.com/leseb/openai-responses-gateway/pkg/core/api"
-	"github.com/leseb/openai-responses-gateway/pkg/core/schema"
+	"github.com/leseb/openresponses-gw/pkg/core/api"
+	"github.com/leseb/openresponses-gw/pkg/core/schema"
 )
 
 // ModelsService handles model listing and information
